# deep_ptr

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  clang.yml  gcc.yml  msvc.yml
cmake/: deep_ptrConfig.cmake.in
examples/: CMakeLists.txt
examples/cmake_cpm/: CMakeLists.txt
examples/cmake_fetch_content/: CMakeLists.txt  main.cpp
include/deep_ptr/: deep_ptr.hpp
tests/: CMakeLists.txt
tests/deep_ptr_test/: CMakeLists.txt  deep_ptr_test.cpp
